# dm546

./: .gitignore
asmvariable/: asmvariable.s
feb11/: html.l  htmlstates.l  idiot.l  ws80.l
feb13/3.15/: fixed.y  orig.output  orig.y
feb13/operators/: operators.y
feb18/formals_append/: CMakeLists.txt  formals.c  formals.h  grammar.y  lexer.l  main.c
feb18/mod_abs_and_uminus/: CMakeLists.txt  exp.l  exp.y  main.c  memory.h  pretty.c  tree.c  tree.h
feb20/debug/: Makefile  debug.s
feb20/factorial/: Makefile  factorial.s
feb20/fib/: Makefile  fib.s
feb20/selectionsort/: Makefile  sel.s
feb4/bintree/: Makefile  bintree.c  bintree.h
feb4/gdb/: Makefile  segfault.c
feb4/hashtable/: Makefile  SimpleMakefile  hashtable.c  hashtable.h
feb4/makeexample/: Makefile  main.c  other.c  other.h
feb4/pointers/: Makefile  p1.c  p2.c  struct1.c  struct2.c  struct3.c
knapsack/: knapsack.c
mar11/: jumptable.c
mar27/factorial/: factorial.c  factorial.o1.s  factorial.o2.s  factorial.o3.s
mar5/: simple_static_link.s  static_link1.s  static_link2.s
testprogram/: test.sh
tinyexpressions/: CMakeLists.txt  Makefile  exp.l  memory.c  tree.h
